CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SVRModel)

# Include external dependencies
SET(DEPENDENCIES SVRCommon)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS date_time REQUIRED)

FILE(GLOB_RECURSE SOURCE_FILES "src/*.*" "include/*.*")

ADD_LIBRARY(${PROJECT_NAME} ${LIBS_BUILD_TYPE} ${SOURCE_FILES} src/Entity.cpp
        src/SVRParameters.cpp
        src/DQScalingFactor.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${Boost_LIBRARIES} iomp5)

INCLUDE_DIRECTORIES(include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} dl)

IF(ENABLE_OPENCL)
        INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS})
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCL_LIBRARIES})
ENDIF(ENABLE_OPENCL)

SET(TEST_DEPENDENCIES ${PROJECT_NAME})
include ("../../cmake/UnitTester.cmake")
