PROJECT(SVRModel)

# Include external dependencies
SET(DEPENDENCIES SVRCommon)
INCLUDE(../../cmake/IncludeDependencies.cmake)

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS date_time REQUIRED CONFIG)

INCLUDE("../../cmake/SourceList.cmake")

ADD_LIBRARY(${PROJECT_NAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${Boost_LIBRARIES} iomp5 dl ${DEPENDENCIES})

INCLUDE_DIRECTORIES(include)

IF(ENABLE_OPENCL)
    INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCL_LIBRARIES})
ENDIF(ENABLE_OPENCL)

SET(TEST_DEPENDENCIES SVRBusiness)
INCLUDE ("../../cmake/UnitTester.cmake")
