CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

IF(USE_CUDA)
    PROJECT(SVRPersist LANGUAGES CXX CUDA)
    INCLUDE_DIRECTORIES(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
ELSE()
    PROJECT(SVRPersist CXX)
ENDIF()


#Define project dependencies
SET(DEPENDENCIES SVRCommon SVRModel OnlineSVR)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS thread system date_time system REQUIRED)
FIND_PACKAGE(LibPQXX REQUIRED)

INCLUDE("../../cmake/SourceList.cmake")

INCLUDE_DIRECTORIES(include ${Boost_INCLUDE_DIR} ${PQXX_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${PQXX_LIBRARIES_DIRECTORY})
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

ADD_LIBRARY(${PROJECT_NAME} ${LIBS_BUILD_TYPE} ${SOURCE_FILES})
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} ${PQXX_LIBRARIES} ${Boost_LIBRARIES})

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

INCLUDE("../../cmake/UnitTester.cmake")

