CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(SVRWeb LANGUAGES CXX)

#Define project dependencies
SET(DEPENDENCIES SVRBusiness SVRPersist SVRCommon SVRModel OnlineSVR)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

SET(CPPCMS_ROOT ../../libs/cppcms-1.0.5/)
SET(CPPCMS_LIBRARYDIR ${CPPCMS_ROOT}/build)

SET(Booster_LIBRARYDIR ${CPPCMS_LIBRARYDIR}/booster)

find_library(CPPCMS_LIB cppcms PATHS ${CPPCMS_LIBRARYDIR})
find_library(BOOSTER_LIB booster PATHS ${CPPCMS_LIBRARYDIR}/booster)

ADD_SUBDIRECTORY(template)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
IF(IDE STREQUAL "QT_CREATOR")
    FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp include/*.h include/*.hpp)
ENDIF(IDE STREQUAL "QT_CREATOR")

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)
FIND_PACKAGE(LibPQXX REQUIRED)
INCLUDE_DIRECTORIES(include ${Boost_INCLUDE_DIR})
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

include_directories(include)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})

target_link_libraries(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} ${PQXX_LIBRARIES} ${CPPCMS_LIB} ${BOOSTER_LIB} ${Boost_LIBRARIES})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PEDANTIC_FLAGS}")
