CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
IF(USE_CUDA)
    PROJECT(SVRWeb LANGUAGES CXX CUDA)
ELSE()
    PROJECT(SVRWeb LANGUAGES CXX)
ENDIF()

#Define project dependencies
SET(DEPENDENCIES SVRBusiness SVRPersist SVRCommon SVRModel OnlineSVR)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

ADD_SUBDIRECTORY(template)

FILE(GLOB_RECURSE SOURCE_FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.tpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)
FIND_PACKAGE(LibPQXX REQUIRED)
INCLUDE_DIRECTORIES(include ${Boost_INCLUDE_DIR})
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

INCLUDE_DIRECTORIES(include ${CMAKE_CUDA_INCLUDE_WHAT_YOU_USE})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} ${PQXX_LIBRARIES} cppcms booster ${Boost_LIBRARIES})