CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
IF(USE_CUDA)
    PROJECT(SVRWeb LANGUAGES CXX CUDA)
ELSE()
    PROJECT(SVRWeb LANGUAGES CXX)
ENDIF()
#Define project dependencies
SET(DEPENDENCIES SVRBusiness SVRPersist SVRCommon SVRModel OnlineSVR)

INCLUDE(../../cmake/IncludeDependencies.cmake)
INCLUDE(../../cmake/SourceList.cmake)

ADD_SUBDIRECTORY(template)

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)
FIND_PACKAGE(LibPQXX REQUIRED)
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

FILE(GLOB_RECURSE SOURCE_FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.tpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")

INCLUDE_DIRECTORIES(include)
IF(USE_CUDA)
    INCLUDE_DIRECTORIES(${CMAKE_CUDA_INCLUDE_WHAT_YOU_USE})
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} ${PQXX_LIBRARIES} cppcms booster ${Boost_LIBRARIES})