CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(SVRWebSkin)

#SET(TEMPLATES_DIR src/template)
FILE(GLOB TEMPLATES *.view)

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

SET(CPPCMS_TMPL_CC_CMD cppcms_tmpl_cc)

add_custom_command(OUTPUT   "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.cpp"
                   COMMAND  ${CPPCMS_TMPL_CC_CMD}
                   ARGS     -o "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.cpp"
                            "${CMAKE_CURRENT_SOURCE_DIR}/MainLayout.tmpl"
                            "${CMAKE_CURRENT_SOURCE_DIR}/*.view"
                   DEPENDS  ${TEMPLATES} ${CMAKE_CURRENT_SOURCE_DIR}/MainLayout.tmpl
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${CPPCMS_LIB} ${BOOSTER_LIB})
