CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(paramtune)

SET(RUN_TESTS OFF)
# SET(ENABLE_OPENCL OFF)

#Define project dependencies
SET(DEPENDENCIES SVRBusiness SVRPersist SVRCommon SVRModel OnlineSVR)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

#opencl
IF(ENABLE_OPENCL)
    FIND_PACKAGE(OpenCL REQUIRED)
ENDIF(ENABLE_OPENCL)

option(USE_VIENNACL "Use the viennacl lib for BLAS" ON)


FILE(GLOB SOURCE_FILES "src/*.cpp")
IF(IDE STREQUAL "QT_CREATOR")
    FILE(GLOB SOURCE_FILES "src/*.cpp" "include/*.h" "include/*.hpp")
ENDIF(IDE STREQUAL "QT_CREATOR")

FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS serialization program_options REQUIRED)
FIND_PACKAGE(LibPQXX REQUIRED)

INCLUDE_DIRECTORIES(include ${Boost_INCLUDE_DIR} ${VCL_PATH})
LINK_DIRECTORIES(${PQXX_LIBRARIES_DIRECTORY})
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${DEPENDENCIES} ${Boost_LIBRARIES})

IF(ENABLE_OPENCL)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCL_LIBRARIES})
ENDIF()
