CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(victor-tester LANGUAGES CXX)

link_directories(${GTEST_ROOT}/lib)

FIND_PACKAGE(LibPQXX REQUIRED)

INCLUDE_DIRECTORIES(include ${PQXX_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${PQXX_LIBRARIES_DIRECTORY})

ADD_EXECUTABLE(${PROJECT_NAME} 
    main.cpp 
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PQXX_LIBRARIES} ${Boost_LIBRARIES})
