PROJECT(victor-tester LANGUAGES CXX)
LINK_DIRECTORIES(/lib /libexec /usr/lib /usr/lib/libexec /usr/local/lib /usr/local/libexec)
FIND_PACKAGE(LibPQXX REQUIRED)
INCLUDE_DIRECTORIES(include ${PQXX_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${PQXX_LIBRARIES_DIRECTORY})
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PQXX_LIBRARIES} ${Boost_LIBRARIES})